[gd_scene load_steps=10 format=3 uid="uid://jcbxlfi7d5p8"]

[ext_resource type="PackedScene" uid="uid://h77pcdre2s1w" path="res://scenes/canvas_modulate.tscn" id="1_agawi"]
[ext_resource type="Script" path="res://scripts/layer_holder.gd" id="1_s3q8h"]
[ext_resource type="Texture2D" uid="uid://dims4l1riuh1k" path="res://assets/0x72_DungeonTilesetII_v1.7/atlas_floor-16x16.png" id="2_nsq0g"]
[ext_resource type="Texture2D" uid="uid://b5ah80k3qe858" path="res://assets/0x72_DungeonTilesetII_v1.7/atlas_walls_low-16x16.png" id="3_ehses"]
[ext_resource type="PackedScene" uid="uid://d3338rrjbw84c" path="res://scenes/hud.tscn" id="4_r7ebs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_whyiq"]
texture = ExtResource("2_nsq0g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0

[sub_resource type="TileSet" id="TileSet_d35ha"]
sources/0 = SubResource("TileSetAtlasSource_whyiq")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_77bqa"]
texture = ExtResource("3_ehses")
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -8, 3, -8, 3, 8, -3, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -8, 8, -8, 8, -2.5, 2.5, -2.5, 2.5, 8, -3, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -8, 8, -8, 8, -2.5, 8, 8, 2.5, 8, -3, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1, 8, -1, 8, 8, 2.5, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_khtq4"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_77bqa")

[node name="Dungeon2" type="Node2D"]

[node name="CanvasModulate" parent="." instance=ExtResource("1_agawi")]

[node name="layer_holder" type="Node" parent="."]
script = ExtResource("1_s3q8h")

[node name="floor_layer" type="TileMapLayer" parent="layer_holder"]
tile_set = SubResource("TileSet_d35ha")

[node name="wall_layer" type="TileMapLayer" parent="layer_holder"]
tile_set = SubResource("TileSet_khtq4")

[node name="HUD" parent="." instance=ExtResource("4_r7ebs")]

[connection signal="new_dungeon" from="HUD" to="layer_holder" method="_on_hud_new_dungeon"]
